REGRESSION (iOS 17): Front and Back Facing Camera Stutter https://bugs.webkit.org/show_bug.cgi?id=265556 rdar://119076271

Reviewed by Youenn Fablet.

Some platforms appear to construct new IOSurface contents on top of
existing IOSurface instance and metadata. Video texture upload was
skipped if the IOSurface object instance pointer and seed matched,
but on some platform it appears that camera produces such new surfaces
with the surface id changing.

Fix by adding surface id to the cache key.

* Source/WebCore/platform/graphics/cv/GraphicsContextGLCVCocoa.cpp:
(WebCore::GraphicsContextGLCVCocoa::copyVideoSampleToTexture):
* Source/WebCore/platform/graphics/cv/GraphicsContextGLCVCocoa.h:

Canonical link: https://commits.webkit.org/272263@main